workshop3/mydb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydb-deployment
  labels:
     name: mydb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydb
  template:
    metadata:
      labels:
        app: mydb 
    spec:
      volumes:
         - name: dbvol
           persistentVolumeClaim:
                claimName: mydb-pvc
      containers:
      - image: stackupiss/northwind-db:v1
        name: mydb
        ports:
        - containerPort: 3306
          name: mydb
        imagePullPolicy: Always
        volumeMounts:
           - mountPath: /var/lib/mysql
             name:  dbvol
