workshop3/myapp-v1-deploy-svc.yaml
## myappv1 SERVICE
kind: Service
apiVersion: v1
metadata:
  name:  myappv1-svc
spec:
  selector:
    app:  myapp
    version: v1
  type:  ClusterIP
  ports:
  - port:  80
    targetPort:  3000

---
## myappv1 Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  myappv1-deployment
  labels:
    app:  myapp
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      version: v1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:           
      containers:
      - image:  stackupiss/northwind-app:v1
        name:  myappv1
        ports:
        - containerPort:  3000
        imagePullPolicy: Always
