workshop3/mydb-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name:  mydb-svc
spec:
  selector:
    app:  mydb
  type:  ClusterIP
  ports:
  - name:  dbport
    port:  3306 # mydb-svc service is available at this port
    targetPort:  3306
