workshop3/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1

kind: Ingress
metadata:
  name: myapp-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #rewrite rule
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: myappv1-svc
              servicePort: 80
    
    - host: "appv1.157.230.193.79.nip.io"
      http: 
        paths:
          - backend:
              serviceName: myappv1-svc
              servicePort: 80

    - host: "appv2.157.230.193.79.nip.io"
      http: 
        paths:
          - backend:
              serviceName: myappv2-svc
              servicePort: 80
